# todos-iced

./: .gitignore  Cargo.toml  i18n.toml
i18n/en/: todo_app_iced.ftl
i18n/ko/: todo_app_iced.ftl
src/: app.rs  audio.rs  i18n.rs  main.rs
src/state/: filter.rs  mod.rs  persistence.rs
src/state/persistence/: mod.rs  sqlite_persistence.rs
src/task/: mod.rs  view.rs
src/ui/: controls.rs  icons.rs  mod.rs  styles.rs
