[package]
name = "todo-app-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version="0.14.0-dev", features = ["tokio"] }
tracing-subscriber = "0.3.20"
tokio = { version = "1.47.1", features = ["fs", "time", "rt"] }
serde_json = "1.0.143"
web-sys = { version="0.3.78", features = ["Window", "Storage"] }
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rodio = "0.21.1"

[package.metadata.deb]
assets = [
  ["target/release-opt/todos", "usr/bin/iced-todos", "755"],
]

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"