[package]
name = "todo-app-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version="0.14.0-dev", features = ["tokio"] }
iced_core = { version="0.14.0-dev" }
iced_widget = { version="0.14.0-dev" }
iced_aw = { version="0.13.0-dev", features = ["full"] }
tracing-subscriber = "0.3.20"
tokio = { version = "1.47.1", features = ["fs", "time", "rt"] }
serde_json = "1.0.143"
web-sys = { version="0.3.78", features = ["Window", "Storage"] }
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rodio = "0.21.1"
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10.0"
rust-embed = "8.7.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

[package.metadata.deb]
assets = [
  ["target/release-opt/todos", "usr/bin/iced-todos", "755"],
]

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git" }
iced_core = { git = "https://github.com/iced-rs/iced.git" }
iced_widget = { git = "https://github.com/iced-rs/iced.git" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git" }
